.gitignore 재수정 반영

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ﻿# Build results
 [Bb]in/
-[Oo]bj/[D]ebug/
-[Oo]bj/[R]elease/
+[Oo]bj/[Dd]ebug/
+[Oo]bj/[Rr]elease/
 [Ll]ibrary/
 [Tt]emp/
 [Bb]uild/
