--- a/SystemClockMod/SystemClockMod.csproj
+++ b/SystemClockMod/SystemClockMod.csproj
@@ -16,7 +16,7 @@
     <Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets"/>
 
     <Target Name="BuildUI" AfterTargets="AfterBuild">
-        <Exec Command="npm run build" WorkingDirectory="$(ProjectDir)/SystemClockUiMod" />
+        <Exec Command="npm run build" WorkingDirectory="$(ProjectDir)..\SystemClockUiMod" />
     </Target>
 
     <ItemGroup>
@@ -64,6 +64,12 @@
     <ItemGroup>
         <None Include="$(ModPropsFile)" Link="Properties\Mod.props"/>
         <None Include="$(ModTargetsFile)" Link="Properties\Mod.targets"/>
+    </ItemGroup>
+    
+    <ItemGroup>
+        <Content Include="lang\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
