--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 ﻿# Build results
 [Bb]in/
-/*/[Oo]bj/[Dd]ebug
-/*/[Oo]bj/[Rr]elease
+[Oo]bj/
 [Ll]ibrary/
 [Tt]emp/
 [Bb]uild/
@@ -22,4 +21,5 @@ node_modules/
 *.pid
 *.tmp
 *.bak
+*.user
 .vs/
