--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "LibShared"]
 	path = LibShared
-	url = git@github.com:zakuro9715/CS2-LibShared.git
+	url = https://github.com/zakuro9715/CS2-LibShared.git
