--- a/SystemClockMod/SystemClockMod.csproj
+++ b/SystemClockMod/SystemClockMod.csproj
@@ -17,7 +17,10 @@
     <Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets"/>
     <Import Project="..\LibShared\LibShared.projitems" Label="Shared" />
 
-    <Target Name="BuildUI" AfterTargets="AfterBuild">
+    <Target Name="BuildUI" AfterTargets="AfterBuild" Condition="'$(Configuration)' == 'Release'">
+        <Exec Command="set NODE_ENV=production &amp;&amp; npm run build" WorkingDirectory="$(ProjectDir)..\SystemClockUiMod" />
+    </Target>
+    <Target Name="BuildUI" AfterTargets="AfterBuild" Condition="'$(Configuration)' != 'Release'">
         <Exec Command="npm run build" WorkingDirectory="$(ProjectDir)..\SystemClockUiMod" />
     </Target>
 
